# signature_cli

./: README.md
rust/: .gitignore  Cargo.toml  tx.json
rust/src/: cli.rs  handler.rs  main.rs  reader.rs  sign.rs  transaction.rs
typescript/lib/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  tx.json  vitest.config.ts
typescript/lib/src/: index.ts
typescript/lib/test/: sign.test.ts  tx-reader.test.ts
typescript/raw/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/raw/src/: encode.ts  index.ts  tx-reader.ts
typescript/raw/test/: encode.test.ts  sign.test.ts  tx-reader.test.ts
