[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
alloy = { version = "0.13", features = ["full"] }
hex = "0.4"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
